--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
     <string name="app_name">My Application</string>
-    <string name="startBtnText">Start</string>
+    <string name="startBtnText">Synchronize</string>
     <string name="defaultIP">192.168.</string>
 </resources>
