--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">FileSync</string>
     <string name="startBtnText">Synchronize</string>
     <string name="defaultIP">192.168.</string>
+    <string name="file">File</string>
 </resources>
